// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render 1`] = `
<button
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
>
  Click Me
</button>
`;

exports[`<Button /> should render with an icon 1`] = `
<button
  className="btn btn-primary btn-icon-left"
  onClick={[Function]}
  type="button"
>
  Click Me
  <Icon
    name="create"
  />
</button>
`;
